--- a/pages/bigburger.html
+++ b/pages/bigburger.html
@@ -32,27 +32,39 @@
       text-align: center;
     }
 
+
+    
+
     .bloco {
       display: flex;
-      align-items: center;
+      flex-direction: column;
       gap: 20px;
       margin-bottom: 40px;
     }
 
     .bloco img {
-      width: 50%;
+      width: 100%;
+      max-width: 500px; /* controla o tamanho máximo */
+      margin: auto;
       border-radius: 8px;
       box-shadow: 0 4px 8px rgba(0,0,0,0.1);
       border: 1px solid #ccc;
     }
 
     .bloco p {
-      width: 50%;
-      font-size: 1.1rem;
-      line-height: 1.6;
-      margin: 0;
-      text-align: justify;
+          width: 50%;
+          font-size: 1.1rem;
+          line-height: 1.6;
+          margin: 0;
+          text-align: justify;
+        }
+
+    .bloco img,
+    .bloco p {
+      width: 100%;
     }
+
+    
 
     .botoes-links {
       display: flex;
