--- a/pages/pipeline.html
+++ b/pages/pipeline.html
@@ -34,29 +34,34 @@
 
     .bloco {
       display: flex;
+      flex-direction: column;
       align-items: center;
       gap: 20px;
       margin-bottom: 40px;
     }
 
     .bloco img {
-      width: 45%;
+      width: 100%;
+      max-width: 500px;
+      margin: auto;
       border-radius: 8px;
       box-shadow: 0 4px 8px rgba(0,0,0,0.1);
       border: 1px solid #ccc;
     }
 
     .bloco p {
-      width: 55%;
+      width: 100%;
       font-size: 1.1rem;
       line-height: 1.6;
       margin: 0;
       text-align: justify;
     }
 
+
     .invertido {
-      flex-direction: row-reverse;
+      flex-direction: column;
     }
+
 
     .botoes-links {
       display: flex;
@@ -105,17 +110,17 @@
       <h1>Pipeline de Dados Ambientais</h1>
 
       <section class="bloco">
-        <img src="../img/desmatamento.png" alt="Dados ambientais AQICN e MapBiomas" />
+        <img src="../img/desm3.png" alt="Dados ambientais AQICN e MapBiomas" />
         <p>
           Projeto do mestrado profissional PPGTI - IFPB que integra dados do <strong>MapBiomas</strong> e <strong>AQICN</strong> para análise ambiental. A proposta foi desenvolver um pipeline completo e automatizado com governança de dados, processando informações de desmatamento e qualidade do ar para posterior visualização em dashboards interativos.
         </p>
       </section>
 
       <section class="bloco invertido">
+        <img src="../img/fluxo_dag.png" alt="DAG no Apache Airflow com operadores Python" />
         <p>
           A orquestração das tarefas foi feita com <strong>Apache Airflow</strong>, usando <code>PythonOperator</code> para organizar a DAG de extração, transformação e disponibilização dos dados. Todo o ambiente foi containerizado com <strong>Docker</strong>, garantindo escalabilidade e portabilidade do projeto.
         </p>
-        <img src="../img/fluxo_dag.png" alt="DAG no Apache Airflow com operadores Python" />
       </section>
 
       <section class="bloco">
@@ -134,11 +139,11 @@
         </p>
       </section>
 
-      <section class="bloco invertido">
+      <section class="bloco invertido"> 
+        <img src="../img/connections_airflow.png" alt="Conexões configuradas no Apache Airflow" />
         <p>
           O uso do <strong>MapBiomas API</strong> no pipeline permitiu o download direto dos dados por meio de integração GraphQL. A conexão foi configurada no Airflow como <code>mapbiomas_login</code>, enquanto o MinIO foi acessado pela conexão <code>minio</code>.
         </p>
-        <img src="../img/connections_airflow.png" alt="Conexões configuradas no Apache Airflow" />
       </section>
 
       <div class="botoes-links">
