--- a/pages/portal.html
+++ b/pages/portal.html
@@ -34,29 +34,34 @@
 
     .bloco {
       display: flex;
+      flex-direction: column;
       align-items: center;
       gap: 20px;
       margin-bottom: 40px;
     }
 
     .bloco img {
-      width: 45%;
+      width: 100%;
+      max-width: 500px;
+      margin: auto;
       border-radius: 8px;
       box-shadow: 0 4px 8px rgba(0,0,0,0.1);
       border: 1px solid #ccc;
     }
 
     .bloco p {
-      width: 55%;
+      width: 100%;
       font-size: 1.1rem;
       line-height: 1.6;
       margin: 0;
       text-align: justify;
     }
 
+
     .invertido {
-      flex-direction: row-reverse;
+      flex-direction: column;
     }
+
 
     .botoes-links {
       display: flex;
@@ -112,10 +117,10 @@
       </section>
 
       <section class="bloco invertido">
+        <img src="../img/portal3.png" alt="Visualização do conteúdo do portal" />
         <p>
           A plataforma foi desenvolvida com <strong>Python e Django</strong> no backend e <strong>HTML, CSS, JavaScript e Bootstrap</strong> no frontend. A estrutura do sistema contempla um módulo para funcionários, com acesso aos conteúdos analíticos, e um módulo administrativo com controle completo de postagens, permissões de usuários e atualizações. 
         </p>
-        <img src="../img/portal3.png" alt="Visualização do conteúdo do portal" />
       </section>
 
       <section class="bloco">
