--- a/pages/portal.html
+++ b/pages/portal.html
@@ -131,6 +131,7 @@
       </section>
 
       <div class="botoes-links">
+        <a href="../docs/RelatorioFinal.pdf" class="botao-voltar" target="_blank">Ver relatório de estágio PDF</a>
         <a href="https://github.com/fabianabeda/Portal_de_Servicos_de_Inteligencia_de_Dados" class="botao-voltar" target="_blank">Ver repositório no GitHub</a>
         <a href="../index.html" class="botao-voltar">&larr; Voltar ao Portfólio</a>
       </div>
