ajuste na apresentacao

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </div>
         <div class="apresentacao">
           <p>
-            Fabiana Oliveira Beda Macêdo, graduada em Sistemas para Internet pelo IFPB e mestranda em Engenharia Elétrica. Atuo com foco em análise e visualização de dados, integração de informações e apoio à tomada de decisão. Minha trajetória inclui projetos nas áreas de Business Intelligence, dados públicos e ambientais. Antes de migrar para a tecnologia, atuei como advogada na área cível bancária.
+            Fabiana Oliveira Beda Macêdo</strong>, graduada em Sistemas para Internet pelo IFPB e mestranda em Engenharia Elétrica, também pelo IFPB. Atuo com foco em análise e visualização de dados, integração de informações e apoio à tomada de decisão. Minha trajetória inclui projetos nas áreas de Business Intelligence, dados públicos e ambientais. Antes de migrar para a área de tecnologia, atuei como advogada na área cível bancária.
           </p>
         </div>
         <div class="name-titulo">
